setting up debugging ci

--- a/.github/workflows/qualify.yaml
+++ b/.github/workflows/qualify.yaml
@@ -8,6 +8,12 @@ on:
         description: "The version that should be qualified"
         type: string
         default: ""
+  workflow_dispatch:
+    inputs:
+      version:
+        description: "The version that should be qualified"
+        type: string
+        default: ""
 
 # Run one qualification per commit.
 # This means we can have multiple qualifications of different versions
@@ -66,6 +72,7 @@ jobs:
           sudo rm /etc/containers/containers.conf
 
       - name: "✨ Running qualification"
+        if: false
         shell: bash
         env:
           MANUALY_TTL_FARM: 1
@@ -76,7 +83,7 @@ jobs:
 
       - name: "⚙️ Uploading artifacts created during qualification"
         uses: actions/upload-artifact@v4
-        if: always()
+        if: false
         with:
           name: ${{ inputs.version }}-${{ matrix.version }}
           path: /tmp/qualifier-artifacts/${{ inputs.version }}
@@ -95,12 +102,14 @@ jobs:
           echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
       - name: "Download all artifacts"
+        if: false
         uses: actions/download-artifact@v4
         with:
           path: ${{ inputs.version }}-${{ steps.date.outputs.date }}
           pattern: ${{ inputs.version }}-*
 
       - name: "Printing what will be uploaded"
+        if: false
         shell: bash
         env:
           ARTIFACTS_DIR: ${{ inputs.version }}-${{ steps.date.outputs.date }}
@@ -110,6 +119,7 @@ jobs:
           tar -cvf "$ARTIFACTS_DIR.tar" $ARTIFACTS_DIR
 
       - name: "Upload artifacts to google drive"
+        if: false
         uses: adityak74/google-drive-upload-git-action@v0.3
         with:
           credentials: ${{ secrets.ARTIFACTS_DRIVE_CREDENTIALS }}
@@ -132,6 +142,7 @@ jobs:
           echo "message=${FULL_MESSAGE}" >> $GITHUB_OUTPUT
 
       - name: "Notify DRE on slack"
+        if: false
         uses: slackapi/slack-github-action@6c661ce58804a1a20f6dc5fbee7f0381b469e001 # v1.25.0
         with:
           channel-id: eng-release-bots
@@ -159,7 +170,7 @@ jobs:
             PUSH_ORIGIN=0
           fi
 
-          python scripts/auto-update-release-index.py
+          python scripts/auto-update-release-index.py ${{ inputs.version }} ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
       - name: "Create/Update PR after a successful rc cut"
         if: ${{ needs.qualify.result == 'success' }}
