--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-frontend/package.json
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-frontend/package.json
@@ -43,6 +43,7 @@
     "@eslint/js": "^9.8.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-katex": "^3.0.4",
     "@vitejs/plugin-react": "^4.0.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.0.0",
