--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-frontend/package.json
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-frontend/package.json
@@ -20,7 +20,7 @@
     "@dfinity/agent": "^0.15.7",
     "@dfinity/candid": "^0.15.7",
     "@dfinity/principal": "^0.15.7",
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/lab": "^5.0.0-alpha.172",
@@ -30,10 +30,12 @@
     "@mui/x-date-pickers": "^7.11.0",
     "@mui/x-date-pickers-pro": "^7.11.0",
     "date-fns": "^2.30.0",
+    "katex": "^0.16.11",
     "next": "^14.2.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-katex": "^3.0.1",
     "react-router-dom": "^6.25.1",
     "recharts": "^2.12.7"
   },
@@ -41,6 +43,7 @@
     "@eslint/js": "^9.8.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-katex": "^3.0.4",
     "@vitejs/plugin-react": "^4.0.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.0.0",
