Add node data page

--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-frontend/package.json
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-frontend/package.json
@@ -27,8 +27,9 @@
     "@mui/material": "^5.16.4",
     "@mui/types": "^7.2.15",
     "@mui/x-charts": "^7.11.0",
+    "@mui/x-data-grid": "^7.14.0",
+    "@mui/x-data-grid-generator": "^7.14.0",
     "@mui/x-date-pickers": "^7.11.0",
-    "@mui/x-date-pickers-pro": "^7.11.0",
     "date-fns": "^2.30.0",
     "katex": "^0.16.11",
     "next": "^14.2.5",
