--- a/.github/workflows/qualify.yaml
+++ b/.github/workflows/qualify.yaml
@@ -16,6 +16,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.inputs.version || github.ref }}
   cancel-in-progress: true
 
+env:
+  AUTO_UPDATE_BRANCH: "auto-update-rel-index"
+
 jobs:
   setup:
     runs-on:
@@ -73,7 +76,6 @@ jobs:
 
       - name: "⚙️ Uploading artifacts created during qualification"
         uses: actions/upload-artifact@v4
-        if: always()
         with:
           name: ${{ inputs.version }}-${{ matrix.version }}
           path: /tmp/qualifier-artifacts/${{ inputs.version }}
@@ -85,6 +87,10 @@ jobs:
     runs-on: ubuntu-22.04
     if: always()
     steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: "dfinity/dre" # this needs to be specified so it can be kicked off from the ic repo
+
       - name: "Get current date"
         id: date
         shell: bash
@@ -139,3 +145,39 @@ jobs:
             Artifacts can be found on <https://drive.google.com/drive/u/1/folders/${{secrets.ARTIFACTS_DRIVE_FOLDER_ID}}|Google Drive :open_file_folder:>
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_API_TOKEN }}
+
+      - name: "Modify release index"
+        if: ${{ needs.qualify.result == 'success' }}
+        id: modify
+        shell: bash
+        run: |
+          pip install ruamel.yaml
+
+          BRANCH_REF=$(git ls-remote --heads https://github.com/dfinity/dre.git refs/heads/${AUTO_UPDATE_BRANCH})
+          if [ -z "$BRANCH_REF" ]; then
+            echo "Branch $BRANCH_REF does not exist, creating..."
+            git checkout -b $BRANCH_REF
+            echo "SHOULD_CREATE_PR=true" >> $GITHUB_OUTPUT
+          else
+            echo "Branch $BRANCH_REF exists"
+            git checkout $BRANCH_REF
+            echo "SHOULD_CREATE_PR=false" >> $GITHUB_OUTPUT
+
+          # Cache current version of script to be able to force checkout main
+          # If testing it is usually hard to get the version correct so this is
+          # a workaround
+          cp scripts/auto-update-release-index.py /tmp/auto-update-release-index.py
+          git fetch origin main --depth 1
+          git checkout main
+
+          python /tmp/auto-update-release-index.py ${{ inputs.version }} ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+      - name: "Create/Update PR after a successful rc cut"
+        if: ${{ needs.qualify.result == 'success' && steps.modify.outputs.SHOULD_CREATE == 'true' }}
+        uses: peter-evans/create-pull-request@v6
+        with:
+          commit-message: "chore: Update `release-index.yaml` after a successful rc cut of ${{ inputs.version }}"
+          branch: ${{ env.AUTO_UPDATE_BRANCH }}
+          title: "chore: Update `release-index.yaml`"
+          body: "This PR updates `release-index.yaml` after a successful rc cut"
+          token: ${{ secrets.GIX_CREATE_PR_PAT }}
