--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ slackblocks = "^1.0.10"
 aiohttp = "^3.10.3"
 quart = "^0.19.6"
 pytest-asyncio = "^0.24.0"
+ruamel-yaml = "^0.18.6"
 pytest-xdist = "^3.6.1"
 
 [tool.poetry.group.dev.dependencies]
