--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics/Cargo.toml
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics/Cargo.toml
@@ -27,6 +27,5 @@ dfn_core = { workspace = true }
 trustworthy-node-metrics-types = { workspace = true }
 ic-base-types = { workspace = true }
 ic-registry-keys = { workspace = true }
-num-traits = { workspace = true }
-rust_decimal = "1.27.0"  # or the latest version
-rust_decimal_macros = "1.27.0"  # optional, for using macros
+rust_decimal = { workspace = true }
+rust_decimal_macros = { workspace = true }  # optional, for using macros
