--- a/rs/decentralization/Cargo.toml
+++ b/rs/decentralization/Cargo.toml
@@ -23,6 +23,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 strum_macros = { workspace = true }
 tabular = { workspace = true }
+futures.workspace = true
 
 [dev-dependencies]
 tokio = { workspace = true }
