--- a/rs/ic-management-types/Cargo.toml
+++ b/rs/ic-management-types/Cargo.toml
@@ -24,6 +24,7 @@ tokio = { workspace = true }
 url = { workspace = true }
 anyhow = { workspace = true }
 candid = { workspace = true }
+ic-protobuf.workspace = true
 
 [dev-dependencies]
 wiremock = { workspace = true }
