chore: update the bo1-dll02 ipv6 address

--- a/node-labels/mainnet.yaml
+++ b/node-labels/mainnet.yaml
@@ -1368,7 +1368,7 @@ data:
     2600:c0d:3002:4:6801:5bff:fe9c:57c6:
       dc: bo1
       label: dll16
-    2600:c0d:3002:4:6801:5ff:fe3a:7089:
+    2600:c0d:3002:4:6801:f2ff:feae:35a4:
       dc: bo1
       label: dll02
     2600:c0d:3002:4:6801:66ff:fef6:eb05:
