--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,6 @@ description = "Tooling for managing the Internet Computer"
 documentation = "https://github.com/dfinity/dre/"
 
 [workspace.dependencies]
-actix = "0.13.5"
 actix-web = { version = "4.9.0", default-features = false, features = [
     "compress-gzip",
     "macros",
@@ -44,10 +43,7 @@ actix-web = { version = "4.9.0", default-features = false, features = [
 actix-rt = "2.10.0"
 ahash = "0.8.11"
 anyhow = "1.0.86"
-assert_matches = "1.5.0"
 async-recursion = "1.1.1"
-async-timer = "0.7.4"
-async-trait = "0.1.82"
 axum-otel-metrics = "0.8.1"
 axum = "0.7.5"
 backoff = { version = "0.4.0", features = ["tokio"] }
@@ -67,41 +63,30 @@ clap = { version = "4.5", features = [
     "string",
     "cargo",
 ] }
+clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
 colored = "2.1.0"
-counter = "0.6.0"
 comfy-table = "7.1.1"
 crossbeam = "0.8.4"
 crossbeam-channel = "0.5.13"
 cryptoki = "0.3.1"
-csv = "1.3.0"
 custom_error = "1.9.2"
 decentralization = { path = "rs/decentralization" }
-trustworthy-node-metrics = { path = "rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics" }
 trustworthy-node-metrics-types = { path = "rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types" }
-derive_builder = "0.20.1"
-derive_more = "1"
 dialoguer = "0.11.0"
 dirs = "5.0.1"
 dotenv = "0.15.0"
 base64 = "0.22.1"
-easy-parallel = "3.3.1"
 edit = "0.1.5"
-either = "1.13.0"
-enum-map = "1.1.1"
 env_logger = "0.11.5"
 erased-serde = "0.4.5"
-exitcode = "1.1.2"
 flate2 = "1.0.33"
-float-ord = "0.3.2"
 fs-err = "2.11.0"
 fs2 = "0.4.3"
 futures = "0.3.30"
-futures-core = "0.3.30"
 futures-util = "0.3.30"
 hex = "0.4.3"
 humantime = "2.1.0"
 humantime-serde = "1.1.1"
-hyper = { version = "1.4.1" }
 ic-agent = "0.37.1"
 octocrab = "0.39.0"
 self_update = { version = "0.41.0", features = ["archive-tar"] }
@@ -115,8 +100,6 @@ ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", rev = "3e54016734c8f73
 ic-config = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
 ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
 ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-identity-hsm = "0.37.0"
-ic-interfaces = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
 ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
 ic-management-backend = { path = "rs/ic-management-backend" }
 ic-management-canister-types = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
@@ -146,7 +129,6 @@ ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee
 cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
 ic-transport-types = "0.37.1"
 ic-utils = "0.37.0"
-include_dir = "0.7.4"
 itertools = "0.13.0"
 keyring = { version = "3.2.1", features = [
     "apple-native",
@@ -154,10 +136,8 @@ keyring = { version = "3.2.1", features = [
 ] }
 lazy_static = "1.5.0"
 log = "0.4.22"
-lru = "0.12.4"
 num-traits = "0.2"
 opentelemetry = { version = "0.22.0", features = ["metrics"] }
-phantom_newtype = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
 pkcs11 = "0.5.0"
 pretty_assertions = "1.4.0"
 pretty_env_logger = "0.5.0"
@@ -166,7 +146,6 @@ prometheus = { version = "0.13.4", features = ["process"] }
 prost = "0.12"
 rand = { version = "0.8.5", features = ["std_rng"] }
 rand_seeder = "0.3.0"
-rayon = "1.10.0"
 regex = "1.10.6"
 registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
 reqwest = { version = "0.12", default-features = false, features = [
@@ -174,13 +153,10 @@ reqwest = { version = "0.12", default-features = false, features = [
     "blocking",
 ] }
 retry = "2.0.0"
-reverse_geocoder = "4.1.1"
-ring = "0.17.8"
 rstest = { version = "0.22.0", default-features = false }
 rust_decimal = "1.36.0" # or the latest version
 rust_decimal_macros = "1.36.0" # optional, for using macros
 serde = { version = "1.0", features = ["derive"] }
-serde_derive = "1.0.209"
 serde_json = "1.0.127"
 serde_yaml = "0.9.34"
 shlex = "1.3.0"
@@ -194,7 +170,6 @@ slog = { version = "2.7.0", features = [
     "release_max_level_debug",
     "release_max_level_trace",
 ] }
-socket2 = "0.5.7"
 spinners = "4.1.1"
 strum = { version = "0.26.3", features = ["derive"] }
 strum_macros = "0.26.4"
@@ -205,8 +180,6 @@ thiserror = "1.0.63"
 tokio = { version = "1.40.0", features = ["full"] }
 tokio-util = "0.7.11"
 url = "2.5.2"
-urlencoding = "2.1.3"
-warp = "0.3"
 wiremock = "0.6.1"
 human_bytes = "0.4"
 headless_chrome = { version = "1.0.13", features = [
