--- a/rs/ic-canisters/Cargo.toml
+++ b/rs/ic-canisters/Cargo.toml
@@ -34,3 +34,5 @@ trustworthy-node-metrics-types = { workspace = true }
 ic-transport-types = { workspace = true }
 ic-registry-keys.workspace = true
 ic-types.workspace = true
+ic-interfaces-registry.workspace = true
+ic-registry-nns-data-provider.workspace = true
