--- a/.github/workflows/update-dependencies.yaml
+++ b/.github/workflows/update-dependencies.yaml
@@ -20,8 +20,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: "🐍 Install Poetry"
-        uses: snok/install-poetry@v1
+      - name: "🐍 Install rye"
+        run: |
+          export RYE_INSTALL_OPTION="--yes"
+          curl -sSf https://rye.astral.sh/get | bash
 
       - name: "⚒️ Run autoupdate for ic-deps"
         run: |
@@ -51,10 +53,8 @@ jobs:
           # Reinstall gcc
           sudo apt install gcc -y
 
-          poetry lock --no-update
-          poetry update
           CARGO_BAZEL_REPIN=true bazel query >/dev/null
-          ./bin/poetry.sh
+          ./bin/release-controller-update-data-model.sh
 
       - name: "🆕 Create a new Pull Request with the changes"
         uses: peter-evans/create-pull-request@v6
@@ -62,7 +62,7 @@ jobs:
           commit-message: "chore: Update dependencies"
           branch: bot-update-deps
           title: "chore: Update dependencies"
-          body: "This PR updates poetry (Python) and cargo (Rust) dependencies and IC repository dependencies"
+          body: "This PR updates Python, Rust crates, and IC repository dependencies"
           token: ${{ secrets.GIX_CREATE_PR_PAT }}
 
       - name: "🪓 Tear down runner"
