--- a/rs/cli/Cargo.toml
+++ b/rs/cli/Cargo.toml
@@ -56,6 +56,7 @@ regex = { workspace = true }
 registry-canister = { workspace = true }
 reqwest = { workspace = true }
 self_update = { workspace = true }
+secrecy = { version = "0.8.0" }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
