--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,73 +1,60 @@
-[tool.poetry]
+[project]
 name = "dre-repo"
 version = "0.5.3"
 description = ""
-authors = ["DRE Team <dept-DRE@dfinity.org>"]
+authors = [{ name = "DRE Team", email = "dept-DRE@dfinity.org" }]
 readme = "README.md"
-package-mode = false
+dependencies = [
+    "requests>=2.32.3",
+    "gitpython>=3.1.43",
+    "numpy>=2.1.1",
+    "pandas>=2.2.2",
+    "paramiko>=3.4.1",
+    "pyyaml>=6.0.2",
+    "colorama>=0.4.6",
+    "elasticsearch>=8.15.0",
+    "mammoth>=1.8.0",
+    "pytest-mock>=3.14.0",
+    "pygithub>=2.4.0",
+    "python-dotenv>=1.0.1",
+    "pre-commit>=3.8.0",
+    "pylint>=3.2.7",
+    "tenacity>=9.0.0",
+    "mkdocs-material>=9.5.34",
+    "mkdocs>=1.6.1",
+    "clickhouse-connect>=0.7.19",
+    "humanfriendly>=10.0",
+    "jupyter>=1.1.1",
+    "matplotlib>=3.9.2",
+    "ipython>=8.27.0",
+    "mkdocs-git-revision-date-localized-plugin>=1.2.7",
+    "mkdocs-git-committers-plugin-2>=2.3.0",
+    "pydiscourse>=1.7.0",
+    "datamodel-code-generator>=0.26.0",
+    "pydantic-yaml>=1.3.0",
+    "google-api-python-client>=2.143.0",
+    "google-auth-httplib2>=0.2.0",
+    "google-auth-oauthlib>=1.2.1",
+    "pydrive2>=1.20.0",
+    "markdownify>=0.13.1",
+    "pytest>=8.3.2",
+    "pytest-asyncio>=0.24.0",
+    "pytest-xdist>=3.6.1",
+    "git-changelog>=2.5.2",
+    "slack-sdk>=3.31.0",
+    "slack-bolt>=1.20.1",
+    "slackblocks>=1.0.10",
+    "ic-py>=1.0.1",
+    "quart>=0.19.6",
+    "ruamel-yaml>=0.18.6",
+    "httpretty>=1.1.4",
+    "aiohttp>=3.10.5",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.10.0,<4"
-colorama = "*"
-elasticsearch = "<8.0,>=7.16"
-elasticsearch-dsl = "*"
-elasticsearch-follow = "*"
-GitPython = "*"
-numpy = "*"
-pandas = "*"
-paramiko = "*"
-PyYAML = "*"
-requests = "*"
-tabulate = "*"
-peewee = "*"
-atlassian-python-api = "*"
-python-dotenv = "*"
-cachetools = "*"
-pre-commit = "*"
-pylint = "*"
-tenacity = "*"
-poetry = "^1.8.2"
-ic-py = "*"
-mkdocs-material = "^9.5.33"
-mkdocs = "^1.5.3"
-clickhouse-connect = "^0.7.18"
-humanfriendly = "^10.0"
-jupyter = "^1.0.0"
-matplotlib = "^3.9.1"
-ipython = "^8.21.0"
-mkdocs-git-revision-date-localized-plugin = "^1.2.4"
-mkdocs-git-committers-plugin-2 = "^2.2.3"
-pydiscourse = "^1.6.1"
-datamodel-code-generator = "^0.25.9"
-pydantic-yaml = "^1.2.1"
-google-api-python-client = "^2.140.0"
-google-auth-httplib2 = "^0.2.0"
-google-auth-oauthlib = "^1.2.1"
-pydrive2 = "^1.20.0"
-markdownify = "^0.13.1"
-pytest = "^8.3.2"
-pygithub = "^2.4.0"
-pytest-mock = "^3.12.0"
-mammoth = "^1.8.0"
-slack-sdk = "^3.31.0"
-git-changelog = "^2.5.1"
-wrapt = "1.16.0"
-poetry-plugin-export = "^1.8.0"
-slack_bolt = "^1.20.1"
-slackblocks = "^1.0.10"
-aiohttp = "^3.10.3"
-quart = "^0.19.6"
-pytest-asyncio = "^0.24.0"
-ruamel-yaml = "^0.18.6"
-pytest-xdist = "^3.6.1"
-
-[tool.poetry.group.dev.dependencies]
-black = "^24"
-httpretty = "^1.1.4"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.rye]
+universal = true                 # The dependency resolver will attempt to generate a resolution that's valid on all platforms, operating systems, and architectures, rather than a resolution that's specific to the current platform.
+virtual = true                   # This is a special mode in which the package itself is not installed, but only the dependencies are.
+dev-dependencies = ["black>=24"]
 
 [tool.black]
 line-length = 120
@@ -77,6 +64,6 @@ extend-exclude = '''
 # in the root of the project.
 # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
 (
-  ^/release-controller/release_index.py    # This file is generated from /bin/poetry.sh
+  ^/release-controller/release_index.py    # This file is generated from /bin/release-controller-update-data-model.sh
 )
 '''
