--- a/rs/canister-log-fetcher/Cargo.toml
+++ b/rs/canister-log-fetcher/Cargo.toml
@@ -2,6 +2,7 @@
 name = "canister-log-fetcher"
 version = { workspace = true }
 edition = { workspace = true }
+license = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
