--- a/rs/ic-observability/log-noise-filter-downloader/Cargo.toml
+++ b/rs/ic-observability/log-noise-filter-downloader/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 authors.workspace = true
 description.workspace = true
 documentation.workspace = true
+license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
