--- a/rs/ic-observability/node-status-updater/Cargo.toml
+++ b/rs/ic-observability/node-status-updater/Cargo.toml
@@ -2,6 +2,7 @@
 name = "node-status-updater"
 version = { workspace = true }
 edition = { workspace = true }
+license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -16,9 +17,7 @@ ic-agent = { workspace = true }
 ic-async-utils = { workspace = true }
 ic-metrics = { workspace = true }
 obs-canister-clients = { path = "../obs-canister-clients" }
-prometheus-http-query = { version = "0.8.3", default-features = false, features = [
-  "rustls-tls-webpki-roots",
-] }
+prometheus-http-query = { workspace = true }
 service-discovery = { path = "../service-discovery" }
 slog = { workspace = true }
 slog-async = { workspace = true }
