--- a/rs/ic-observability/prometheus-config-updater/Cargo.toml
+++ b/rs/ic-observability/prometheus-config-updater/Cargo.toml
@@ -2,6 +2,7 @@
 name = "prometheus-config-updater"
 version = { workspace = true }
 edition = { workspace = true }
+license.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
