--- a/rs/qualifier/Cargo.toml
+++ b/rs/qualifier/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 authors.workspace = true
 description.workspace = true
 documentation.workspace = true
+license.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
