--- a/.github/workflows/update-dependencies.yaml
+++ b/.github/workflows/update-dependencies.yaml
@@ -19,6 +19,7 @@ jobs:
       ########################################
       - name: "⚒️ Run autoupdate for ic-deps"
         run: |
+          rye sync
           python scripts/auto-update-revisions.py
 
       - name: "⚒️ Completely delete bazel cache and then recreate it"
