--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -91,3 +91,12 @@ repos:
           command -v rye >/dev/null || echo 'rye' not found. Please install it by following the instructions from https://rye.astral.sh/
           rye run python release-controller/ci_check.py --repo-path ~/.cache/git/ic
           '
+      - id: cargo-deny-checks
+        language: system
+        name: Cargo deny checks
+        verbose: true
+        entry: |
+          bash -c '
+          command -v cargo-deny >/dev/null || echo "'cargo-deny' not found. Please install it by running 'cargo install cargo-deny'"
+          cargo deny check
+          '
