--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -31,6 +31,12 @@ http_file(
 )
 
 http_file(
+    name = "cargo_deny",
+    sha256 = "3df23bbdc19f5bf12284cbebde70f8d00587fe416c1fdd92dd1bee858d6bfada",
+    url = "https://github.com/EmbarkStudios/cargo-deny/releases/download/0.16.1/cargo-deny-0.16.1-aarch64-unknown-linux-musl.tar.gz",
+)
+
+http_file(
     name = "bazelisk_linux",
     sha256 = "d9af1fa808c0529753c3befda75123236a711d971d3485a390507122148773a3",
     url = "https://github.com/bazelbuild/bazelisk/releases/download/v1.20.0/bazelisk-linux-amd64",
