Address various issues through the use of Cargo deny. (#862)
Co-authored-by: Luka Skugor <luka.skugor@chimeramail.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ edition = "2021"
 authors = ["IC Decentralized Reliability Engineering (DRE) Team"]
 description = "Tooling for managing the Internet Computer"
 documentation = "https://github.com/dfinity/dre/"
+license = "Apache-2.0"
 
 [workspace.dependencies]
 actix-web = { version = "4.9.0", default-features = false, features = [
@@ -90,7 +91,10 @@ humantime = "2.1.0"
 humantime-serde = "1.1.1"
 ic-agent = "0.37.1"
 octocrab = "0.39.0"
-self_update = { version = "0.41.0", features = ["archive-tar"] }
+self_update = { version = "0.41.0", default-features = false, features = [
+    "archive-tar",
+    "rustls",
+] }
 ic-async-utils = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
 ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
 ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
@@ -142,7 +146,9 @@ opentelemetry = { version = "0.22.0", features = ["metrics"] }
 pkcs11 = "0.5.0"
 pretty_assertions = "1.4.0"
 pretty_env_logger = "0.5.0"
-prometheus-http-query = "0.8.3"
+prometheus-http-query = { version = "0.8.3", default-features = false, features = [
+    "rustls-tls-webpki-roots",
+] }
 prometheus = { version = "0.13.4", features = ["process"] }
 prost = "0.12"
 rand = { version = "0.8.5", features = ["std_rng"] }
@@ -150,7 +156,7 @@ rand_seeder = "0.3.0"
 regex = "1.10.6"
 registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
 reqwest = { version = "0.12", default-features = false, features = [
-    "rustls-tls",
+    "rustls-tls-webpki-roots",
     "blocking",
 ] }
 retry = "2.0.0"
@@ -184,16 +190,12 @@ tokio-util = "0.7.12"
 url = "2.5.2"
 wiremock = "0.6.1"
 human_bytes = "0.4"
-headless_chrome = { version = "1.0.14", features = [
-    "fetch",
-], default-features = false }
 mockall = "0.13.0"
 
 # dre-canisters dependencies
 ic-cdk-timers = { git = "https://github.com/dfinity/cdk-rs.git", rev = "3e54016734c8f73fb3acabc9c9e72c960c85eb3b" }
 ic-cdk-macros = { git = "https://github.com/dfinity/cdk-rs.git", rev = "3e54016734c8f73fb3acabc9c9e72c960c85eb3b" }
 ic-stable-structures = "0.6.5"
-ciborium = "0.2.2"
 dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
 
 # dre-airflow deps, should be replaced with dre-airflow once
