--- a/rs/cli/Cargo.toml
+++ b/rs/cli/Cargo.toml
@@ -6,6 +6,7 @@ authors.workspace = true
 edition.workspace = true
 description.workspace = true
 documentation.workspace = true
+license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -73,7 +74,6 @@ cryptoki = { workspace = true }
 keyring = { workspace = true }
 comfy-table = { workspace = true }
 human_bytes = { workspace = true }
-headless_chrome = { workspace = true }
 mockall.workspace = true
 clio = { workspace = true }
 
