fix(ci): Update the token for creating a PR in the k8s repo

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -127,7 +127,7 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         uses: ./.github/workflows/update-k8s-deployments
         with:
-          github_api_token: ${{ secrets.K8S_API_TOKEN }}
+          github_api_token: ${{ secrets.GIX_CREATE_PR_PAT }}
 
       ########################################
       # Deploy to github pages
