missing to copy the Cargo.toml to good place

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -6,6 +6,11 @@ exports_files([
     "rustfmt.toml",
     "WORKSPACE.bazel",
 ])
+exports_files([
+    "Cargo.toml"
+],
+    visibility = ["//visibility:public"]
+)
 
 alias(
     name = "rustfmt",
