adding missing dep

--- a/rs/cli/BUILD.bazel
+++ b/rs/cli/BUILD.bazel
@@ -30,14 +30,13 @@ genrule(
         tar -xzvf $(execpath :cargo_deny)
         chmod +x cargo-deny-0.16.1-x86_64-unknown-linux-musl/cargo-deny
         cp cargo-deny-0.16.1-x86_64-unknown-linux-musl/cargo-deny $@
-        cp $(location //:Cargo.toml) $@
     """,
     executable = True
 )
 
 run_binary(
     name = "run_cargo_deny",
-    srcs = [":untar_cargo_deny"],
+    srcs = [":untar_cargo_deny", "//:Cargo.toml"],
     tool = ":untar_cargo_deny",
     outs = ["cargo-deny-out"],
     args = ["--manifest-path", "$(location //:Cargo.toml)", "check"]
