Prepare next week's base release.
Soon the feature release.

--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,4 +1,11 @@
 releases:
+  - rc_name: rc--2024-09-06_01-30
+    versions:
+      - name: base
+        version: 36c1976526fc488d40a89000f81d9f4897d2324e
+      # not yet
+      # - name: canister-snapshots
+      #   version: 843e71b994e1bf28edf80ad7746a7355259de91a
   - rc_name: rc--2024-08-29_01-30
     versions:
       - name: base
