--- a/.github/workflows/qualify.yaml
+++ b/.github/workflows/qualify.yaml
@@ -171,7 +171,8 @@ jobs:
           git fetch origin main --depth 1
           git checkout main
 
-          python /tmp/auto-update-release-index.py ${{ inputs.version }} ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          rye sync
+          rye run python3 /tmp/auto-update-release-index.py ${{ inputs.version }} ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
       - name: "Create/Update PR after a successful rc cut"
         if: ${{ needs.qualify.result == 'success' && steps.modify.outputs.SHOULD_CREATE == 'true' }}
