--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,6 +34,6 @@ jobs:
           sha: ${{github.event.pull_request.head.sha || github.sha}}
 
       - name: Run checks for release index
-        if: ${{ steps.changed-files.outputs.all_changed_files_count > 0 && steps.changed-files.outputs.other_changed_files_count == 0  }}
         run: |
-          python release-controller/ci_check.py --repo-path /home/runner/.cache
+          rye sync
+          rye run python3 release-controller/ci_check.py --repo-path /home/runner/.cache
