Add back secrecy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -162,8 +162,9 @@ reqwest = { version = "0.12", default-features = false, features = [
 ] }
 retry = "2.0.0"
 rstest = { version = "0.22.0", default-features = false }
-rust_decimal = "1.36.0"  # or the latest version
-rust_decimal_macros = "1.36.0"  # optional, for using macros
+rust_decimal = "1.36.0"
+rust_decimal_macros = "1.36.0"
+secrecy = { version = "0.8.0" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.128"
 serde_yaml = "0.9.34"
