feat(cli): Use IndexMap instead of BTreeMap where possible, to keep the ordering

--- a/rs/decentralization/Cargo.toml
+++ b/rs/decentralization/Cargo.toml
@@ -14,6 +14,7 @@ ahash = { workspace = true }
 anyhow = { workspace = true }
 ic-base-types = { workspace = true }
 ic-management-types = { workspace = true }
+indexmap = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
 rand = { workspace = true }
