--- a/rs/np-notifications/Cargo.toml
+++ b/rs/np-notifications/Cargo.toml
@@ -16,6 +16,7 @@ clap = { workspace = true }
 ic-management-backend = { path = "../ic-management-backend" }
 ic-management-types = { path = "../ic-management-types" }
 ic-types = { workspace = true }
+indexmap = { workspace = true }
 rand = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
