--- a/rs/cli/Cargo.toml
+++ b/rs/cli/Cargo.toml
@@ -81,7 +81,7 @@ clio = { workspace = true }
 [dev-dependencies]
 actix-rt = { workspace = true }
 hex.workspace = true
-openssl = "0.10.66"
+openssl.workspace = true
 
 [build-dependencies]
 clap = { workspace = true }
